--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,8 +18,20 @@ body {
   border-top: 4px solid #00b5ad;
   margin-bottom: 40px;
   margin-top: 0px;
-}
 
+  .dropdown-menu {
+    padding: 0px;
+
+    li a {
+      border-bottom: 1px solid #d8d8d8;
+      line-height: 2.4;
+
+      .glyphicon {
+        margin-right: 8px;
+      }
+    }
+  }
+}
 
 /* Sticky footer styles */
 html {
@@ -55,7 +67,6 @@ body {
   }
 }
 
-
 /* User register page */
 .register-page {
   img.captcha {
@@ -72,8 +83,31 @@ body {
       margin-bottom: 0px;
     }
   }
-}
 
+  .nav-tabs {
+    margin-bottom: 20px;
+
+    >li.active > a {
+      background-color: #fff;
+    }
+  }
+
+  .list-group {
+    .list-group-item {
+      border: none;
+      margin-bottom: 0px;
+      border-bottom: 1px solid #efefef;
+
+      .meta {
+        color: #b3b3b3;
+      }
+    }
+  }
+
+  .pagination {
+    margin: 12px 0;
+  }
+}
 
 
 /* Topic Index Page */
@@ -89,7 +123,7 @@ body {
       color: #444444;
     }
     .meta {
-      font-size:0.9em;
+      font-size: 0.9em;
       color: #b3b3b3;
       a {
         color: #b3b3b3;
