--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -87,7 +87,7 @@ body {
   .nav-tabs {
     margin-bottom: 20px;
 
-    >li.active > a {
+    > li.active > a {
       background-color: #fff;
     }
   }
@@ -108,7 +108,6 @@ body {
     margin: 12px 0;
   }
 }
-
 
 /* Topic Index Page */
 .topics-index-page, .categories-show-page {
@@ -137,6 +136,23 @@ body {
       margin-bottom: 12px;
       border: 0;
       border-top: 1px solid #dcebf5;
+    }
+  }
+}
+
+/* Topic Show Page */
+
+@import "topic_body";
+
+.topics-show-page {
+
+  .panel {
+    padding: 15px;
+
+    h1 {
+      margin: 0.4em auto 0.6em;
+      font-size: 28px;
+      line-height: 38px;
     }
   }
 }
